feat: add SEO and social media meta tags with new social card image
- Added comprehensive Open Graph and Twitter meta tags to index.html for improved social sharing and SEO
- Created new professionally designed social-card.png for consistent visual identity on social platforms
- Updated SEO component to use new image URL in OG_IMAGE constant
- Enhanced website metadata with theme color, canonical URL, and robot indexing directives
- Improved page description and title consistency across SEO and social platforms

--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PVETUI - Terminal UI for Proxmox VE</title>
+    <meta
+      name="description"
+      content="PVETUI is a terminal user interface for Proxmox VE."
+    />
+    <link rel="canonical" href="https://pvetui.org/" />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#1e293b" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="PVETUI" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:url" content="https://pvetui.org/" />
+    <meta property="og:title" content="PVETUI - Terminal UI for Proxmox VE" />
+    <meta
+      property="og:description"
+      content="PVETUI is a terminal user interface for Proxmox VE."
+    />
+    <meta property="og:image" content="https://pvetui.org/social-card.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="PVETUI terminal dashboard preview" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PVETUI - Terminal UI for Proxmox VE" />
+    <meta
+      name="twitter:description"
+      content="PVETUI is a terminal user interface for Proxmox VE."
+    />
+    <meta name="twitter:image" content="https://pvetui.org/social-card.png" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
